--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Новая папка1\**" />
+    <Compile Remove="Views\Новая папка\**" />
+    <Content Remove="Views\Новая папка1\**" />
+    <Content Remove="Views\Новая папка\**" />
+    <EmbeddedResource Remove="Views\Новая папка1\**" />
+    <EmbeddedResource Remove="Views\Новая папка\**" />
+    <None Remove="Views\Новая папка1\**" />
+    <None Remove="Views\Новая папка\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\image\" />
   </ItemGroup>
 
